[tool.poetry]
name = "geneweaver-docs"
version = "0.0.1a0"
description = ""
authors = ["Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.0.13"
mkdocs-jupyter = "^0.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
