[tool.poetry]
name = "geneweaver-docs"
version = "0.0.2a0"
description = ""
authors = ["Alexander Berger <alexander.berger@jax.org>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"
mkdocs-material = "^9.5.11"
mkdocs-jupyter = "^0.24.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
